--- a/dashboard.css
+++ b/dashboard.css
@@ -13,10 +13,9 @@ body {
 }
 .main{
 display: grid;
-grid-template: max-content calc(100vh) / max-content minmax(600px, 1fr);
+grid-template: max-content auto / max-content minmax(600px, 1fr);
 padding-right: 20px;
 gap: 20px;
-overflow: hidden;
 }
 .main > * {
 border: 1px solid #000000; 
@@ -269,7 +268,8 @@ grid-column: 1/-1;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-auto-rows: max-content;
   padding: 10px;
-  overflow-y:auto;  /* temp solution */
+
+
 }
 .content-box{
   background-color: rgb(255, 255, 255);
