--- a/dashboard.css
+++ b/dashboard.css
@@ -17,9 +17,7 @@ grid-template: max-content auto / max-content minmax(600px, 1fr);
 padding-right: 20px;
 gap: 20px;
 }
-.main > * {
-border: 1px solid #000000; 
-}
+
 
 :root {
   --dark-text: #383838; 
@@ -254,9 +252,7 @@ font-size: 24px;
   grid-template: 1fr / 5fr 1fr;
 }
 
-.content > * {
-  border: 1px solid #007BFF; 
-}
+
 
 .content-header{
 grid-row: 1 ;
@@ -308,18 +304,18 @@ h3{
 }
 
 h2 {
-  font-size: 28px; /* Set font size */
-  font-weight: 600; /* Set font weight */
-  color: var(--dark-text); /* Set color */
+  font-size: 28px; 
+  font-weight: 600; 
+  color: var(--dark-text); 
 }
 
 p {
   font-size: 14px;
   font-weight: 400;
   margin-bottom: auto;
-  padding: 10px; /* Add padding */
-  line-height: 1.5; /* Add line height for readability */
-  color: #333; /* Add color */
+  padding: 10px; 
+  line-height: 1.5; 
+  color: #333; 
 }
 .content-controls{
   display: flex;
@@ -339,7 +335,8 @@ p {
   padding: 30px;
   margin-left: 20px; 
   row-gap: 25px;
-  background-color: #f0f0f0; 
+ border-radius: 20px;
+ box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Box shadow for depth */
 }
 
 .Annoucements{
@@ -348,6 +345,8 @@ p {
   grid-template: 1fr/1fr;
   gap: 20px;
   padding: 20px;
+  max-width: 393px; 
+  max-height: 544px;
 }
 
 .Trending{
@@ -363,6 +362,8 @@ p {
   gap: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
+  max-width: 393px; 
+  cursor: pointer;
 }
 
 .Trending-user-icon {
@@ -373,11 +374,16 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
+  
+  transition: all 0.3s ease-in-out; /* Add transition */
+  border: 2px solid transparent; /* Add a transparent border */
 }
 
-.Trending-user-icon span {
-  font-size: 30px; 
-  color: white; 
+
+.Trending-info-box:hover .Trending-user-icon {
+  transform: scale(1.1); 
+  border-color: #000080; 
+  
 }
 
 /* universal/noplace in particular */
